public/style/master.css
body {
  font-family: "helvetica"
}

.light-montserrat {
  font-family: "'Montserrat', sans-serif";
  font-weight: 300;
}
.xlight-montserrat {
  font-family: "'Montserrat', sans-serif";
  font-weight: 200;
}

.homepage-background {
  background-image: url("../images/background.png");
  height: 1007px;
  width: 100%;
  background-repeat: no-repeat;
  background-size: cover;
}

.homepage-form-input::placeholder {
  color: black;
}

.homepage-nav-buttons {
  z-index: 20;
  margin: 0 30px;
}

.footer-images {
  display: flex;
  justify-content: flex-start;
}

.homepage-navbar,
.homepage-tagline,
.homepage-search-form {
  z-index: 20;
}

.homepage-background::after {
  content: " ";
  z-index: 5;
  display: block;
  position: absolute;
  height: 1007px;
  top: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, .5);
}

.login-container {
  height: 667px;
  width: 470px;
}

.login-header {
  font-size: 3em;
}

.login-form-box {
  width: 470px;
  height: 667px;
}

.btn-facebook {
  background-color: #3C5A96;
}

.btn-google {
  -webkit-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
  -moz-box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.5);
}

.btn-cinch {
  background-color: black;
  color: white;
  border-radius: 6;
}

.detail-program-detail {
  width: 764px;
  height: 902px;
}

.detail-search-input {
  height: 50px !important;
}

.detail-nav {
  width: 100vw;
  height: 80px;
}

.search-membership-buttons {
  width: 144px;
  height: 40px;
}

.detail-container {
  margin: 50px 275px
}

.detail-location-group {
  width: 370px;
  height: 373px;
}

.register-cinch-submit {
  width: 570px;
  height: 50px;
  margin: 0px;
}

.search-input {
  height: 50px;
  width: 170px;
}

.search-logo {
  padding-left: 150px;
}

